--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -153,4 +153,72 @@ section div img {
 section .livro {
 	margin: 10px;
 }
+.borda {
+	border-top: 2px solid #27AE60;
+	margin-top: -20vw;
+}
+.borda2 {
+	border-bottom: 2px solid #27AE60;
+	margin-top: -25.1vw ;
+}
+.selos {
+	display: flex;
+	align-items: center;
+	margin-top: 65px;
+	
+}
+.traco {
+	width: 3px;
+	height: 92px;
+	background-color: #937DC2;
+	margin-top: -85px;
+}
+.selo {
+	width: 47px;
+	height: auto;
+}
+.texto {
+	margin: 0 1vw 19vw;
+}
+.texto2 {
+	border-bottom: 1px solid #382C2C;
+	width: 10vw;
+	margin: 0 1vw 19vw;
+}
+
+h2 {
+	font-size: 2.5vw;
+	color: #231F2D;
+	font-weight: bold;
+	margin: 0vw 18vw 0vw 10vw;
+	margin-top: 6vw;
+}
+.livros {
+	margin: 13vw 49vw 18vw 0vw;
+}
+.button2 {
+	border: solid #27AE60;
+	padding: 1vw 8vw;
+	border-radius: 2px;
+	background-color: #27AE60;
+	color: #FFFFFF;
+	font-size: 17px;
+}
+.livros {
+	display: flex;
+	margin-right: 20vw;
+	
+}
+.livro1 {
+	width: 130px;
+	
+}
+
+
+
+
+
+
+
+
 
