--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -53,6 +53,10 @@ table {
   display: flex;
   margin: 2vw 6vw;
   color: black; 
+
+}
+.navegacao ul li {
+	margin-top: 1.8vw;
 }
 .navegacao {
 	border-bottom: 2px solid green;
@@ -81,32 +85,39 @@ table {
   .ifbooks span {
 	color: #27AE60;
 	font-weight: bold;
-  }
-  
+}
   .menu-icones {
 	display: flex;
 	align-items: center;
-	gap: 0.5rem;
-	margin-top: 30px;
-  }
-  
+	gap: 1rem;
+	margin-top: 0.9vw;
+} 
   .icon {
-	width: 24px;
+	width: 2.1vw;
 	height: auto;
-  }
-  
+}
   .pauzinho {
 	height: 30px;
 	width: 2px;
 	background-color: #27AE60;
   }
   .pauzinho1 {
-	height: 30px;
+	height: 3vw;
 	width: 2px;
 	background-color: #27AE60;
-	margin-top: 40px;
-	margin-left: 20px;
+	margin-top: 20px;
+}
+.barra-pesquisa {
+	border: solid #F1F1F1;
+	height: 2.7vw;
+	width: 40%;
+	margin-top: 1vw;
+	border-radius: 0.2vw;
+	background-color: #F1F1F1;
+	color: #B8B8B8;
+	padding: 0.6vw 0 0.6vw 0.9vw;
   }
+
 ul li {
 	margin: 3vw 2vw 0 2vw;
 	border-left: 2px #27AE60;
@@ -166,7 +177,6 @@ section .livro {
 	display: flex;
 	align-items: center;
 	margin-top: 65px;
-	
 }
 .traco {
 	width: 3px;
@@ -229,6 +239,36 @@ h2 {
 	border: solid #27AE60;
 	font-size: 16px;
 	font-family: Inter;
+}
+footer {
+	border-bottom: solid black;
+	background-color: #27AE60;
+	margin-top: 12vw;
+	height: 25vw;
+}
+.footer-titulo {
+	margin-left: 10vw;	
+	padding-top: 3vw;
+}
+footer p {
+	margin-left: 9.5vw;
+	margin-top: 1vw;
+}
+footer i {
+	font-size: 2vw;
+	padding: 0 0.5vw;
+}
+footer {
+    display: flex;
+	justify-content: space-between;
+	color: #FFFFFF;
+}
+.contato2 {
+	margin-top: 2vw;
+	margin-right: 9vw;
+}
+.cartoes {
+	margin-top: 4vw;
 }
 
 
