--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,7 @@ small, strike, strong, sub, sup, tt, var,
 b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
+table, caption, tbody, tfoot, thead, tr, th, td,  
 article, aside, canvas, details, embed, 
 figure, figcaption, footer, header, hgroup, 
 menu, nav, output, ruby, section, summary,
@@ -28,6 +28,9 @@ time, mark, audio, video {
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
 	display: block;
+}
+html {
+	font-size: calc(12px + 0.390625vw);
 }
 body {
 	line-height: 1;
@@ -61,9 +64,6 @@ table {
 .navegacao {
 	border-bottom: 2px solid green;
 	margin:0 0 20px ;
-	
-}
-.navegacao .ifbooks {
 	
 }
 .navegacao span {
@@ -201,19 +201,19 @@ h2 {
 	font-size: 2.5vw;
 	color: #231F2D;
 	font-weight: bold;
-	margin-left: 8vw;
+	margin-left: 4vw;
 	margin-top: 6vw;
 }
 .container {
 	display: grid;
 	grid-template-columns: 200px 200px 200px 200px;
-	gap: 15vh;
-	margin-left: 16vh;
+	gap: 25vh;
+	margin-left: 8vh;
 	margin-top: 10vh;
 }
 .container img {
-	width: 270px;
-	height: 370px;
+	width: 19.5vw;
+	height: 30vw;
 }
 .item h3 {
 	margin-top: 10px;
@@ -241,7 +241,6 @@ h2 {
 	font-family: Inter;
 }
 footer {
-	border-bottom: solid black;
 	background-color: #27AE60;
 	margin-top: 12vw;
 	height: 25vw;
@@ -270,10 +269,21 @@ footer {
 .cartoes {
 	margin-top: 4vw;
 }
-
-
-
-
+.footer-borda {
+	padding: 0.2vw 0 0 0;
+	background-color: #FFFFFF;
+}
+.footer-direitos{
+	background-color: #27AE60;
+	text-align: center;
+	padding: 1vw;
+}
+.titulo-carrinho{
+	color: #27AE60;
+}
+.titulo-carrinho {
+	display: grid;
+}
 
 
 
